tests/snapshots/pysnaptest__mocks__test_mocks_test_mock_json_snapshot_async_fetch_user@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_mocks.py"
---
{
  "id": 7,
  "name": "grace"
}
