tests/snapshots/pysnaptest__mocks__test_mocks_test_mock_json_snapshot_pydantic_args_and_result_fetch_user-request@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_mocks.py"
---
{
  "args": [
    {
      "id": 1,
      "name": "ada"
    }
  ],
  "kwargs": null
}
