tests/snapshots/pysnaptest__mocks__test_snapshots_test_mock_json_snapshot_pydantic_model_build_model@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "id": 1,
  "name": "foo"
}
