tests/snapshots/pysnaptest__mocks__test_snapshots_test_mock_or_json_snapshot_add-request@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "args": [
    1
  ],
  "kwargs": {
    "y": 2
  }
}
