tests/snapshots/pysnaptest__mocks__test_snapshots_test_mock_or_json_snapshot_redactions_call_fn@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_snapshots.py"
---
{
  "sum": "[redacted]",
  "x": 1,
  "y": 2
}
